[gd_scene load_steps=3 format=3 uid="uid://c4rxpbdq82gpp"]

[ext_resource type="Script" path="res://ui/settings/settings.gd" id="1_cc4qg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kvv3m"]
bg_color = Color(0.270588, 0.411765, 0.458824, 1)

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cc4qg")
default_config_path = "res://ui/settings/settings.cfg"

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_kvv3m")

[node name="SettingsPage" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -102.0
offset_top = -109.5
offset_right = 102.0
offset_bottom = 109.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="ScrollContainer" type="ScrollContainer" parent="SettingsPage"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true
horizontal_scroll_mode = 0

[node name="SettingsList" type="VBoxContainer" parent="SettingsPage/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="Label" type="Label" parent="SettingsPage/ScrollContainer/SettingsList"]
layout_mode = 2
text = "Video"
horizontal_alignment = 1

[node name="FullscreenToggle" type="CheckButton" parent="SettingsPage/ScrollContainer/SettingsList"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Fullscreen"

[node name="Buttons" type="HBoxContainer" parent="SettingsPage"]
layout_mode = 2
alignment = 1

[node name="BackButton" type="Button" parent="SettingsPage/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
text = "Cancel"

[node name="Default" type="Button" parent="SettingsPage/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
text = "Default"

[node name="Apply" type="Button" parent="SettingsPage/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
text = "Apply"

[connection signal="toggled" from="SettingsPage/ScrollContainer/SettingsList/FullscreenToggle" to="." method="_on_setting_changed" binds= ["fullscreen"]]
[connection signal="pressed" from="SettingsPage/Buttons/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="SettingsPage/Buttons/Default" to="." method="_on_default_pressed"]
[connection signal="pressed" from="SettingsPage/Buttons/Apply" to="." method="_on_apply_pressed"]
